--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
+    "react-star-ratings": "^2.3.0",
     "react-stars": "^2.2.5",
     "react-type-animation": "^3.2.0",
+    "swiper": "^12.0.2",
     "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
