--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.7.1",
     "react-star-ratings": "^2.3.0",
     "react-stars": "^2.2.5",
+    "react-super-responsive-table": "^6.0.2",
     "react-type-animation": "^3.2.0",
     "swiper": "^12.0.2",
     "tailwind-scrollbar-hide": "^4.0.0"
