--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "server": "cd SERVER && npm run dev"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/vite": "^4.1.11",
@@ -23,6 +24,8 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-player": "^3.3.3",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.1",
     "react-star-ratings": "^2.3.0",
