--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "server": "cd SERVER && npm run dev"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-progress": "^1.1.7",
     "@ramonak/react-progress-bar": "^5.4.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "concurrently": "^9.2.0",
+    "lucide-react": "^0.544.0",
     "otp-input-react": "^0.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
