--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "concurrently": "^9.2.0",
+    "cors": "^2.8.5",
     "lucide-react": "^0.544.0",
+    "nodemailer": "^7.0.12",
     "otp-input-react": "^0.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
